--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
 		"firebase": "^11.6.0",
 		"firebase-functions": "^6.3.2",
 		"html2pdf.js": "^0.10.3",
+		"lodash": "^4.17.21",
 		"lucide-svelte": "^0.503.0",
 		"nodemailer": "^7.0.3",
 		"resend": "^4.5.1",
+		"svelte-french-toast": "^1.2.0",
+		"svelte-hero-icons": "^5.2.0",
 		"xlsx": "^0.18.5"
 	}
 }
