--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"globals": "^16.0.0",
 		"jsdom": "^26.0.0",
 		"postcss": "^8.4.31",
+		"postcss-import": "^16.1.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -42,6 +43,7 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.5",
+		"vite-plugin-tailwind-purgecss": "^0.3.5",
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
